backend/startup_error_utf8.txt
node : file:///C:/Users/lenovo
/fauzan/mesin_cuci_store/backe
nd/src/controllers/orderContro
ller.js:3
At line:1 char:1
+ node src/server.js > 
startup_error.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo          : 
    NotSpecified: (file:///C  
  :/User...Controller.js:3:   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
import { AppError } from 
'../utils/appError.js';
         ^^^^^^^^
SyntaxError: The requested 
module '../utils/appError.js' 
does not provide an export 
named 'AppError'
    at #asyncInstantiate (node
:internal/modules/esm/module_j
ob:302:21)
    at async ModuleJob.run (no
de:internal/modules/esm/module
_job:405:5)
    at async onImport.tracePro
mise.__proto__ (node:internal/
modules/esm/loader:660:26)
    at async asyncRunEntryPoin
tWithESMLoader (node:internal/
modules/run_main:101:5)

Node.js v24.12.0
